--- a/k8s/spring-deployment.yaml
+++ b/k8s/spring-deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: spring-config
+  namespace: devops
 data:
   SPRING_DATASOURCE_URL: jdbc:mysql://mysql-service:3306/springdb
 ---
@@ -11,6 +12,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: spring-secret
+  namespace: devops
 type: Opaque
 data:
   SPRING_DATASOURCE_USERNAME: c3ByaW5n
@@ -21,6 +23,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: spring-app
+  namespace: devops
 spec:
   replicas: 2
   selector:
@@ -47,6 +50,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: spring-service
+  namespace: devops
 spec:
   selector:
     app: spring-app
