--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -1,8 +1,15 @@
+# Namespace
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: devops
+---
 # PersistentVolume (PV)
 apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mysql-pv
+  namespace: devops
 spec:
   capacity:
     storage: 1Gi
@@ -16,6 +23,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pvc
+  namespace: devops
 spec:
   accessModes:
     - ReadWriteOnce
@@ -28,6 +36,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
+  namespace: devops
 spec:
   replicas: 1
   selector:
@@ -61,6 +70,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
+  namespace: devops
 spec:
   selector:
     app: mysql
