--- a/k8s/spring-deployment.yaml
+++ b/k8s/spring-deployment.yaml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
       - name: spring-app
-        image: <dockerhub-user>/spring-app:1.0  # Remplace par ton image Docker
+        image: meriembenmrad/spring-app:1.0   # Remplace par ton image Docker
         ports:
         - containerPort: 8080
         envFrom:
