--- a/k8s/spring-deployment.yaml
+++ b/k8s/spring-deployment.yaml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
       - name: spring-app
-        image: meriembenmrad/spring-app:1.0   # Remplace par ton image Docker
+        image: meriembenmrad/spring-app:1.0
         ports:
         - containerPort: 8080
         envFrom:
@@ -57,5 +57,5 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
-      nodePort: 30080  # Port optionnel pour NodePort (30000-32767)
+      # nodePort: 30080  <-- supprimé pour laisser Kubernetes choisir un port libre
   type: NodePort
